frontend: fix flip-screen button alignment in bootloader
Flip-screen button was vertically misaligned.

Removed inline styling and added a new inline prop for buttons
which should appear within text content. Altought prefered is
still having text followed by normal button so they are consistent
with the rest of the UI and have bigger clickable area.

Regression introduced in:
- 7dc40ba1b728a330ac5340628b2bedb7c428e158

--- a/frontends/web/src/components/forms/button.module.css
+++ b/frontends/web/src/components/forms/button.module.css
@@ -101,6 +101,13 @@
     opacity: 0.4;
 }
 
+.inline {
+    height: auto;
+    min-height: auto;
+    padding: 0;
+    text-decoration: underline;
+}
+
 .button[hidden] {
     display: none;
 }
